Fix FilterColumn disappearing when user types in input
Issue: Since header with title and filter input is sticky it is possible for the actual top of column to be above viewport while the header (visually the top) is visible. When contents are filtered column height changes, and if the new column height fits in the offscreen part (whole column now offscreen) the header unsticks and the whole column disappears. This could be very confusing on mobile overview page.

Solution: instantly scroll top of column to same position has header when filter query changes (prevents column going offscreen, user doesn't see scroll since sticky header does not move).

--- a/src/css/_section.css
+++ b/src/css/_section.css
@@ -1,5 +1,7 @@
 @utility section {
     @apply flex flex-col w-full max-w-96 bg-base-200 rounded-2xl;
+    /* Snap to bottom of Navbar when scrolled to top of screen */
+    @apply scroll-mt-16;
 
     /* Pseudo element mask positions base-100 squares under title corners.
      * Title is sticky, so once it hits the top of the page it will stay there
